--- a/06-CSS-Properties/6.4 Motivation Meme Project/style.css
+++ b/06-CSS-Properties/6.4 Motivation Meme Project/style.css
@@ -1,33 +1,21 @@
 body {
   background-color: black;
 }
-
-#meme {
-  margin-top: 50px;
+h1 {
+  text-transform: uppercase;
+  font-size: 3rem;
 }
 
-img {
-  margin: 0;
-  width: 100%;
-}
-
-#daenerys {
+.poster {
   width: 50%;
   margin: auto;
+  margin-top: 100px;
+  color: white;
+  font-family: "Libre Baskerville", serif;
+  text-align: center;
+}
+
+.motivation-img {
   border: 5px solid white;
-}
-
-h1 {
-  color: white;
-  font-family: "Libre Baskerville", serif;
-  font-size: 50px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-p {
-  color: white;
-  font-family: "Libre Baskerville", serif;
-  font-size: 20px;
-  text-align: center;
+  width: 100%;
 }
