--- a/07-Intermediate-CSS/7.0 CSS Cascade/style.css
+++ b/07-Intermediate-CSS/7.0 CSS Cascade/style.css
@@ -11,7 +11,7 @@ p {
   padding: 0;
 }
 
-p {
+.white-text {
   color: white;
 }
 
@@ -21,6 +21,5 @@ p {
 }
 
 #outer-box {
-  border: 10px solid purple;
-  padding: 0px;
+  background-color: purple;
 }
