--- a/07-Intermediate-CSS/7.1 Combining Selectors/style.css
+++ b/07-Intermediate-CSS/7.1 Combining Selectors/style.css
@@ -3,3 +3,23 @@ h1,
 h2 {
   color: blueviolet;
 }
+
+/* parent>child */
+.box > p {
+  color: firebrick;
+}
+
+/* ancestor decendant */
+.box li {
+  color: blue;
+}
+
+/* chaining */
+li.done {
+  color: seagreen;
+}
+
+/* combining */
+ul p.done {
+  font-size: 0.5rem;
+}
